add subclass Controller